--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "poi-sistem",
+  "name": "poi-taxi-multilokasi",
   "version": "1.0.0",
-  "main": "api/handler.js",
   "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    "firebase": "^10.4.0",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "node-fetch": "^3.3.2",
+    "firebase": "^10.7.1"
   }
 }
